--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,182 +16,191 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="Mei Rusfandi"
+            android:layout_margin="@dimen/content_padding"
+            android:text="@string/tv_name"
             android:textAlignment="center"
-            android:textSize="24sp"
+            android:textSize="@dimen/tv_name_size"
             android:textStyle="bold"/>
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/profile_image"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:src="@drawable/pas_photo"/>
+            android:layout_width="@dimen/profile_image_size"
+            android:layout_height="@dimen/profile_image_size"
+            android:layout_gravity="center"/>
 
         <com.google.android.material.textview.MaterialTextView
-            android:text="Pendidikan"
-            android:textSize="16sp"
+            android:text="@string/tv_education"
+            android:textSize="@dimen/tv_title_size"
             android:textStyle="bold"
-            android:background="#F2F2F2"
+            android:background="@color/title_background_color"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="16dp"
-            android:paddingVertical="8dp"/>
+            android:paddingHorizontal="@dimen/content_padding"
+            android:paddingVertical="@dimen/content_margin"/>
 
         <com.google.android.material.textview.MaterialTextView
-            android:text="Universitas Lampung - Ilmu Komputer 2014-2019"
-            android:textSize="14sp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="8dp"
+            android:text="@string/tv_bachelor_degree"
+            android:textSize="@dimen/tv_experience_size"
+            android:layout_marginHorizontal="@dimen/content_padding"
+            android:layout_marginVertical="@dimen/content_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <View
-            android:background="#f5f5f5"
+            android:background="@color/separator_color"
             android:layout_width="match_parent"
-            android:layout_height="1dp"/>
+            android:layout_height="@dimen/one_dp"/>
 
         <com.google.android.material.textview.MaterialTextView
-            android:text="SMA N 1 Gadingrejo - IPA 2011-2014"
-            android:textSize="14sp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="8dp"
+            android:text="@string/tv_high_school"
+            android:textSize="@dimen/tv_experience_size"
+            android:layout_marginHorizontal="@dimen/content_padding"
+            android:layout_marginVertical="@dimen/content_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textview.MaterialTextView
-            android:text="Skills"
+            android:text="@string/tv_skill"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="16dp"
-            android:paddingVertical="8dp"
-            android:background="#F2F2F2"
-            android:textSize="16sp"
+            android:paddingHorizontal="@dimen/content_padding"
+            android:paddingVertical="@dimen/content_margin"
+            android:background="@color/title_background_color"
+            android:textSize="@dimen/tv_title_size"
             android:textStyle="bold"/>
 
         <com.google.android.material.textview.MaterialTextView
-            android:text="Mobile Developer (Java/Kotlin/Flutter)"
-            android:textSize="14sp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="8dp"
+            android:text="@string/tv_skill_mobile"
+            android:textSize="@dimen/tv_experience_size"
+            android:layout_marginHorizontal="@dimen/content_padding"
+            android:layout_marginVertical="@dimen/content_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <View
-            android:background="#f5f5f5"
+            android:background="@color/separator_color"
             android:layout_width="match_parent"
-            android:layout_height="1dp"/>
+            android:layout_height="@dimen/one_dp"/>
 
         <com.google.android.material.textview.MaterialTextView
-            android:text="Web Developer (Codeigniter/PHP)"
-            android:textSize="14sp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="8dp"
+            android:text="@string/tv_skill_web"
+            android:textSize="@dimen/tv_experience_size"
+            android:layout_marginHorizontal="@dimen/content_padding"
+            android:layout_marginVertical="@dimen/content_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <View
-            android:background="#f5f5f5"
+            android:background="@color/separator_color"
             android:layout_width="match_parent"
-            android:layout_height="1dp"/>
+            android:layout_height="@dimen/one_dp"/>
 
         <com.google.android.material.textview.MaterialTextView
-            android:text="Backend Developer (Codeigniter/PHP/Golang)"
-            android:textSize="14sp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="8dp"
+            android:text="@string/tv_skill_backend"
+            android:textSize="@dimen/tv_experience_size"
+            android:layout_marginHorizontal="@dimen/content_padding"
+            android:layout_marginVertical="@dimen/content_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textview.MaterialTextView
-            android:text="Pengalaman Kerja"
+            android:text="@string/tv_experience"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="16dp"
-            android:paddingVertical="8dp"
-            android:background="#F2F2F2"
-            android:textSize="16sp"
+            android:paddingHorizontal="@dimen/content_padding"
+            android:paddingVertical="@dimen/content_margin"
+            android:background="@color/title_background_color"
+            android:textSize="@dimen/tv_title_size"
             android:textStyle="bold"/>
 
         <com.google.android.material.textview.MaterialTextView
-            android:text="PT Lentera Benderang Bangsa (Binar Academy) - Project Livin by Mandiri at Bank Mandiri sebagai Android Developer 11 Oktober 2021 - 11 Oktober 2022"
-            android:textSize="14sp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="8dp"
+            android:text="@string/tv_binar_academy"
+            android:textSize="@dimen/tv_experience_size"
+            android:layout_marginHorizontal="@dimen/content_padding"
+            android:layout_marginVertical="@dimen/content_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <View
-            android:background="#f5f5f5"
+            android:background="@color/separator_color"
             android:layout_width="match_parent"
-            android:layout_height="1dp"/>
+            android:layout_height="@dimen/one_dp"/>
 
         <com.google.android.material.textview.MaterialTextView
-            android:text="Dinas Cipta Karya, Tata Ruang dan Pertanahan Provinsi DKI Jakarta sebagai Mobile Apps Developer Januari - Desember 2021"
-            android:textSize="14sp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="8dp"
+            android:text="@string/tv_dcktrp"
+            android:textSize="@dimen/tv_experience_size"
+            android:layout_marginHorizontal="@dimen/content_padding"
+            android:layout_marginVertical="@dimen/content_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <View
-            android:background="#f5f5f5"
+            android:background="@color/separator_color"
             android:layout_width="match_parent"
-            android:layout_height="1dp"/>
+            android:layout_height="@dimen/one_dp"/>
 
         <com.google.android.material.textview.MaterialTextView
-            android:text="PT Klik Digital Sinergi sebagai Frontend Developer Februari 2020 - Oktober 2021"
-            android:textSize="14sp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="8dp"
+            android:text="@string/tv_klik"
+            android:textSize="@dimen/tv_experience_size"
+            android:layout_marginHorizontal="@dimen/content_padding"
+            android:layout_marginVertical="@dimen/content_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <View
-            android:background="#f5f5f5"
+            android:background="@color/separator_color"
             android:layout_width="match_parent"
-            android:layout_height="1dp"/>
+            android:layout_height="@dimen/one_dp"/>
 
         <com.google.android.material.textview.MaterialTextView
-            android:text="PT 107 sebagai Programmer Maret 2019 - Desember 2019"
-            android:textSize="14sp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="8dp"
+            android:text="@string/tv_107"
+            android:textSize="@dimen/tv_experience_size"
+            android:layout_marginHorizontal="@dimen/content_padding"
+            android:layout_marginVertical="@dimen/content_margin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:text="@string/tv_social_media"
+            android:layout_margin="@dimen/content_padding"
+            android:padding="@dimen/content_padding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <LinearLayout
             android:orientation="horizontal"
             android:weightSum="3"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="8dp"
+            android:layout_marginHorizontal="@dimen/content_padding"
+            android:layout_marginVertical="@dimen/content_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/instagram"
-                android:layout_margin="8dp"
+                android:layout_margin="@dimen/content_margin"
                 android:layout_weight="1"
                 android:src="@drawable/instagram"
-                android:layout_width="0dp"
-                android:layout_height="60dp"/>
+                android:layout_width="@dimen/zero_dp"
+                android:layout_height="@dimen/content_social_media_size"
+                tools:ignore="ContentDescription" />
 
             <ImageView
                 android:id="@+id/linkedin"
-                android:layout_margin="8dp"
+                android:layout_margin="@dimen/content_margin"
                 android:layout_weight="1"
                 android:src="@drawable/linkedin"
-                android:layout_width="0dp"
-                android:layout_height="60dp"/>
+                android:layout_width="@dimen/zero_dp"
+                android:layout_height="@dimen/content_social_media_size"
+                tools:ignore="ContentDescription" />
 
             <ImageView
                 android:id="@+id/github"
-                android:layout_margin="8dp"
+                android:layout_margin="@dimen/content_margin"
                 android:layout_weight="1"
                 android:src="@drawable/github"
-                android:layout_width="0dp"
-                android:layout_height="60dp"/>
+                android:layout_width="@dimen/zero_dp"
+                android:layout_height="@dimen/content_social_media_size"
+                tools:ignore="ContentDescription" />
 
         </LinearLayout>
 
